[package]
name = "rust-graphql"
version = "0.1.0"
authors = ["damien.dube@gmail.com>"]
edition = '2018'

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[dependencies]
env_logger = "0.5"

actix = "0.7"   
actix-web = "0.7"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

juniper = "0.9.2"
